# PyTEMGrid

./: # PyTEMGrid.md  .gitignore  README.md  pyproject.toml
Examples/: example_of_usage copia.ipynb
PyTEMGrid/: MIT License.md  __init__.py  ancillary.py  tem_grid.py
PyTEMGrid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
